--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Your History ;)</title>
-  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/styles.css"> -->
   <script type="text/javascript" src="/jquery.js"></script>
 </head>
 <body>
