--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Your History ;)</title>
-  <!-- <link rel="stylesheet" type="text/css" href="/styles.css"> -->
-  <script type="text/javascript" src="/jquery.js"></script>
+  <title>History</title>
 </head>
 <body>
-  <h1>Must-Stash Results:</h1>
-  <p id="query"></p>
-  <a href="#" id="topmatch"></a>
-
+  <input id="query" type="text" />
+  <button id="search">Search</button>
+  <div id="results"></div>
   <script type="text/javascript" src="./js/popup-bundle.js"></script>
 </body>
 </html>
