removes console log
removes console log causing errors.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,7 +6,7 @@
 <body>
   <input id="query" type="text" />
   <button id="search">Search</button>
-  <div id="results"></div>
+  <a href="#" id="results"></a>
   <script type="text/javascript" src="./js/popup-bundle.js"></script>
 </body>
 </html>
