Allows user to choose in options which server to post to

--- a/options/options.html
+++ b/options/options.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>Options</h1>
+  <h2>Current Server</h3>
+  <h3 id="server">www.gny-consulting.com</h3>
+  <p>Change to:</p>
+  <input type="text" id="server-change">
+  <button id="submit">Submit</button>
+
   <script type="text/javascript" src="./js/options-bundle.js"></script>
 </body>
 </html>
