Popup links clickable and restyled

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,10 +2,14 @@
 <html>
 <head>
   <title>History</title>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
-  <input id="query" type="text" />
-  <button id="search">Search</button>
+  <div id="searchbar">
+    <input id="query" type="text" />
+    <img src="./css/magnifying-glass.svg" id="search">
+  </div>
   <a href="#" id="results"></a>
   <script type="text/javascript" src="./js/popup-bundle.js"></script>
 </body>
