--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="searchbar">
+    <img src="./css/icon-48-blue.png" id="MSlogo">
     <input id="query" type="text" />
     <img src="./css/magnifying-glass.svg" id="search">
   </div>
