Adds a more suggestions link to go to extension site

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,6 +12,7 @@
     <img src="./css/magnifying-glass.svg" id="search">
   </div>
   <a href="#" id="results"></a>
+  <p><a href="http://must-stash.devleague.com" id="more">More Suggestions ...</a></p>
   <script type="text/javascript" src="./js/popup-bundle.js"></script>
 </body>
 </html>
